--- a/main.css
+++ b/main.css
@@ -55,7 +55,7 @@ a {
 header {
   margin-top: 30px;
   padding: 28% 0;
-  background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)),url('images/seattleme2.jpg');
+  background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)),url('images/seattleme.jpg');
   background-repeat: no-repeat;
   background-size: contain;
   background-position: center;
