--- a/main.css
+++ b/main.css
@@ -3,13 +3,13 @@
 }
 
 body {
-  font-family: "Open Sans",
-  sans-serif; 
-  font-size: 20px;
+font-family: 'Quattrocento Sans', sans-serif;
+  font-size: 16px;
   color: #444;
   text-align: center;
   line-height: 1.5;
   margin: 0;
+  //background-color: lightgrey;
 }
 
 nav,
@@ -26,6 +26,7 @@ nav {
   right: 0;
   z-index: 10;
   text-align: right;
+font-family: 'Quattrocento', serif;
 }
 
 footer {
@@ -33,12 +34,20 @@ footer {
 }
 
 nav div{
+  margin:0;
+  padding: 0 20px;
   display:inline-block;
 }
 
 .name{
   float:left;
 }
+
+#projects h4 {
+  color: white;
+}
+
+
 
 nav h4 {
   margin:0;
@@ -54,23 +63,29 @@ a {
 
 header {
   margin-top: 30px;
-  padding: 28% 0;
-  background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)),url('images/seattleme.jpg');
+  padding: 28% 0 0 0;
+  background-image: linear-gradient(rgba(0,0,0,0.2),rgba(0,0,0,0.2)),url('images/seattleme.jpg');
   background-repeat: no-repeat;
   background-size: contain;
   background-position: center;
   background-color: white;
-  height:300px;
+  height:150px;
 }
 
-header h1,h2{
+header  h1,h2{
   margin: 0;
   text-align: right;
   color:white;
-  padding-right: 100px;
+  padding-right: 10%;
+  font-size: 0.75em;
 }
 
-p {
+h3{
+  margin-bottom: 40px;
+  font-family: 'Quattrocento', serif;
+}
+
+ #contact p, #about p {
   max-width: 1000px;
   margin: 0 auto;
   padding: 0 20px;
@@ -78,20 +93,51 @@ p {
 
 section {
   min-height: 200px;
-  padding: 4% 0;
-  background-color: grey;
+  padding: 15% 0;
+  background-color: #78c1c1;
+  position: relative;
 }
 
 section:nth-child(even) {
-  background-color: white;
+  background-color: #e7e7e7;
 }
 
-#projects > div {
+.halfcircle::before, .halfcircle::after {
+  display:block;
+ position:absolute;
+ content:'';
+ left: 50%;
+ z-index:9;
+ width: 100px;
+ height: 100px;
+ border-radius: 50%;
+ -webkit-transform: translateX(-50%);
+ transform: translateX(-50%);
+ 
+}
+.halfcircle::after {
+  background: #e7e7e7;
+  top: -50px;
+}
+
+.halfcircle::before {
+background: #78c1c1;
+
+ bottom: -50px;
+}
+
+#projects  .flipper {
   border:1px solid black;
   border-radius: 5px;
-  margin:20px;
-  padding-bottom: 20px;
-  background-color: lightgrey;
+  //margin:40px 100px;
+ //padding-bottom: 20px;
+  background: linear-gradient(to bottom, #2C3E50 , #be6463); 
+  //width: 350px;
+    height: 427px;
+    color: white;
+}
+
+.project1, .project2, .project3 {
 }
 
 #email a {
@@ -103,6 +149,67 @@ section:nth-child(even) {
 }
 
 img {
-  max-height: 300px;
+  
+  width:300px;
   max-width: 100%;
+  border-radius: 5px;
+  margin-bottom: 20px;
 }
+
+/* entire container, keeps perspective */
+.flip-container {
+  perspective: 1000px;
+}
+  /* flip the pane when hovered */
+  .flip-container:hover .flipper, .flip-container.hover .flipper {
+    transform: rotateY(180deg);
+  }
+
+.flip-container, .front, .back  {
+ //width: 350px;
+    height: 427px;
+    margin-bottom: 20px;
+    
+}
+
+/* flip speed goes here */
+.flipper {
+  transition: 0.6s;
+  transform-style: preserve-3d;
+
+  position: relative;
+}
+
+/* hide back of pane during swap */
+.front, .back {
+  backface-visibility: hidden;
+
+  position: absolute;
+  //top: 0;
+  left: 0;
+  right:0;
+  margin: 0 auto;
+  padding: 10px;
+
+}
+
+
+
+/* front pane, placed above back */
+.front {
+  z-index: 2;
+  /* for firefox 31 */
+  transform: rotateY(0deg);
+}
+
+/* back, initially hidden pane */
+.back {
+  transform: rotateY(180deg);
+  background-color: black;
+  border:1px solid black;
+  border-radius: 5px;
+  color:white;
+  font-size: 18px;
+}
+
+
