--- a/float-grid.css
+++ b/float-grid.css
@@ -89,7 +89,7 @@ header h1, h2 {
 }
 
 header {
-  padding: 28% 0 20% 0;
+  padding: 28% 0 26% 0;
 }
   
  
@@ -97,9 +97,13 @@ header {
 
 @media only screen and (min-width: 700px) {
   
-  section {
-      padding: 8% 0;
-  }
+  #about{
+  padding-bottom: 8%;
+}
+
+#contact {
+  padding-top: 8%;
+}
 
   .back {
     font-size: 16px;
@@ -113,5 +117,32 @@ header {
     font-size: 20px;
   }
 
+
+
 }
 
+@media only screen and (max-width: 700px) {
+
+.topnav a {display: none;}
+a.icon {
+    float: right;
+    display: block;
+  }
+  .topnav.responsive {position: relative; float:none;}
+  a.icon {
+    position: absolute;
+    right: 5px;
+    top: 5px;
+  }
+
+  .topnav.responsive a:first-child{
+    margin-top: 40px;
+  }
+
+  .topnav.responsive a {
+    float: none;
+    display: block;
+    text-align: right;
+    padding: 1% 5px;
+  }
+}
