--- a/main.css
+++ b/main.css
@@ -5,11 +5,10 @@
 body {
 font-family: 'Quattrocento Sans', sans-serif;
   font-size: 16px;
-  color: #444;
+  color: white;
   text-align: center;
   line-height: 1.5;
   margin: 0;
-  //background-color: lightgrey;
 }
 
 nav,
@@ -25,7 +24,6 @@ nav {
   left: 0;
   right: 0;
   z-index: 10;
-  text-align: right;
 font-family: 'Quattrocento', serif;
 }
 
@@ -34,9 +32,9 @@ footer {
 }
 
 nav div{
-  margin:0;
-  padding: 0 20px;
-  display:inline-block;
+  //margin:0;
+  //padding: 0 20px;
+  //display:inline-block;
 }
 
 .name{
@@ -64,11 +62,11 @@ a {
 header {
   margin-top: 30px;
   padding: 28% 0 0 0;
-  background-image: linear-gradient(rgba(0,0,0,0.2),rgba(0,0,0,0.2)),url('images/seattleme.jpg');
+  background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)),url('images/seattleme.jpg');
   background-repeat: no-repeat;
   background-size: contain;
   background-position: center;
-  background-color: white;
+  background-color: #5a7590;
   height:150px;
 }
 
@@ -81,7 +79,7 @@ header  h1,h2{
 }
 
 h3{
-  margin-bottom: 40px;
+  margin-bottom: 60px;
   font-family: 'Quattrocento', serif;
 }
 
@@ -93,13 +91,24 @@ h3{
 
 section {
   min-height: 200px;
-  padding: 15% 0;
-  background-color: #78c1c1;
+  padding: 4% 0;
   position: relative;
 }
 
-section:nth-child(even) {
-  background-color: #e7e7e7;
+#projects {
+  background-color: #78c1c1;
+  color: black;
+}
+
+#about{
+  padding-bottom: 15%;
+  background-color: #5a7590;
+}
+
+#contact {
+  padding-top: 15%;
+  color:black;
+  background-color: white;
 }
 
 .halfcircle::before, .halfcircle::after {
@@ -108,40 +117,54 @@ section:nth-child(even) {
  content:'';
  left: 50%;
  z-index:9;
- width: 100px;
- height: 100px;
+ width: 70px;
+ height: 70px;
  border-radius: 50%;
  -webkit-transform: translateX(-50%);
  transform: translateX(-50%);
- 
+
 }
 .halfcircle::after {
-  background: #e7e7e7;
-  top: -50px;
+  background: #78c1c1;
+  top: -40px;
 }
 
 .halfcircle::before {
 background: #78c1c1;
 
- bottom: -50px;
+ bottom: -40px;
 }
 
 #projects  .flipper {
   border:1px solid black;
   border-radius: 5px;
-  //margin:40px 100px;
- //padding-bottom: 20px;
   background: linear-gradient(to bottom, #2C3E50 , #be6463); 
-  //width: 350px;
-    height: 427px;
+    height: 400px;
     color: white;
 }
 
-.project1, .project2, .project3 {
+#email a {
+  color: #78c1c1;
 }
 
-#email a {
-  color:blue;
+#email a:hover{
+  color:black;
+}
+
+.fa-envelope-o {
+  padding-right: 5px;
+}
+
+.fa-angle-double-up {
+  margin-left: 90%;
+  border-radius: 40%;
+  background-color: black;
+  padding: 8px;
+  box-shadow: 5px 5px 5px #888888;
+}
+
+.fa-angle-double-up:hover{
+  box-shadow: 7px 7px 7px #888888;
 }
 
 #socialmedia i {
@@ -166,8 +189,7 @@ img {
   }
 
 .flip-container, .front, .back  {
- //width: 350px;
-    height: 427px;
+    height: 400px;
     margin-bottom: 20px;
     
 }
@@ -185,7 +207,6 @@ img {
   backface-visibility: hidden;
 
   position: absolute;
-  //top: 0;
   left: 0;
   right:0;
   margin: 0 auto;
@@ -212,4 +233,35 @@ img {
   font-size: 18px;
 }
 
+/* Style the links inside the navigation bar */
+.topnav a {
+    float: left;
+    display: block;
+    text-align: center;
+    padding: 0 16px;
+    text-decoration: none;
+}
 
+.topnav {
+  float:right;
+}
+
+.topnav a:hover {
+  font-weight:bold;
+}
+
+/* Change the color of links on hover */
+.topnav.responsive a:hover {
+    background-color: #ddd;
+    color: black;
+}
+
+/* Add an active class to highlight the current page */
+.active {
+    background-color: #4CAF50;
+}
+
+/* Hide the link that should open and close the topnav on small screens */
+.icon {
+    display: none;
+}
