--- a/main.css
+++ b/main.css
@@ -79,7 +79,8 @@ header  h1,h2{
 }
 
 h3{
-  margin-bottom: 20px;
+  font-size: 1em;
+ // margin-bottom: 20px;
   font-family: 'Quattrocento', serif;
 }
 
@@ -117,8 +118,8 @@ section {
  content:'';
  left: 50%;
  z-index:9;
- width: 60px;
- height: 60px;
+ width: 40px;
+ height: 40px;
  border-radius: 50%;
  -webkit-transform: translateX(-50%);
  transform: translateX(-50%);
@@ -126,13 +127,13 @@ section {
 
 .halfcircle::after {
   background: #78c1c1;
-  top: -40px;
+  top: -30px;
 }
 
 .halfcircle::before {
 background: #78c1c1;
 
- bottom: -40px;
+ bottom: -30px;
 }
 
 #projects  .flipper {
