--- a/float-grid.css
+++ b/float-grid.css
@@ -82,18 +82,7 @@
   } 
 }
 
-@media only screen and (min-width: 400px) {
 
-header h1, h2 {
-  font-size: 1em;
-}
-
-header {
-  padding: 28% 0 26% 0;
-}
-  
- 
-}
 
 @media only screen and (min-width: 700px) {
   
@@ -109,40 +98,32 @@ header {
     font-size: 16px;
   }
 
-  header h1, h2 {
+  header h1 {
     font-size: 2em;
   }
 
+  header h2{
+        font-size: 1.5em;
+  }
   body {
     font-size: 20px;
   }
 
-
-
+/* Style the links inside the navigation bar */
+.topnav a {
+    float: left;
+    display: block;
+    text-align: center;
+    padding: 0 40px;
+    text-decoration: none;
 }
 
-@media only screen and (max-width: 700px) {
-
-.topnav a {display: none;}
+.topnav {
+  float:right;
+}
+/* Hide the link that should open and close the topnav on small screens */
 a.icon {
-    float: right;
-    display: block;
-  }
-  .topnav.responsive {position: relative; float:none;}
-  a.icon {
-    position: absolute;
-    right: 5px;
-    top: 5px;
-  }
+    display: none;
+}
 
-  .topnav.responsive a:first-child{
-    margin-top: 40px;
-  }
-
-  .topnav.responsive a {
-    float: none;
-    display: block;
-    text-align: right;
-    padding: 1% 5px;
-  }
 }
