--- a/main.css
+++ b/main.css
@@ -61,13 +61,12 @@ a {
 
 header {
   margin-top: 30px;
-  padding: 28% 0 0 0;
   background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)),url('images/seattleme.jpg');
   background-repeat: no-repeat;
-  background-size: contain;
-  background-position: center;
+  background-size: cover;
+  background-position: inherit;
   background-color: #5a7590;
-  height:150px;
+  padding-bottom: 20px;
 }
 
 header  h1,h2{
@@ -75,12 +74,25 @@ header  h1,h2{
   text-align: right;
   color:white;
   padding-right: 10%;
+}
+
+header h1 {
+  font-size: 1em;
+
+}
+
+header h2 {
   font-size: 0.75em;
+}
+
+header .foo {
+      padding: 18% 0 ;
+
 }
 
 h3{
   font-size: 1em;
- // margin-bottom: 20px;
+ //margin-bottom: 20px;
   font-family: 'Quattrocento', serif;
 }
 
@@ -156,15 +168,16 @@ background: #78c1c1;
   padding-right: 5px;
 }
 
-.fa-angle-double-up {
+.fa-angle-double-up, .fa-angle-double-down {
   margin-left: 90%;
   border-radius: 40%;
+  border: 0.5px solid grey;
   background-color: black;
   padding: 8px;
   box-shadow: 5px 5px 5px #888888;
 }
 
-.fa-angle-double-up:hover{
+.fa-angle-double-up:hover, .fa-angle-double-down:hover{
   box-shadow: 7px 7px 7px #888888;
 }
 
@@ -234,18 +247,7 @@ img {
   font-size: 18px;
 }
 
-/* Style the links inside the navigation bar */
-.topnav a {
-    float: left;
-    display: block;
-    text-align: center;
-    padding: 0 16px;
-    text-decoration: none;
-}
 
-.topnav {
-  float:right;
-}
 
 .topnav a:hover {
   font-weight:bold;
@@ -262,7 +264,25 @@ img {
     background-color: #4CAF50;
 }
 
-/* Hide the link that should open and close the topnav on small screens */
-.icon {
-    display: none;
-}
+.topnav a {display: none;}
+a.icon {
+    float: right;
+    display: block;
+  }
+  .topnav.responsive {position: relative; float:none;}
+  a.icon {
+    position: absolute;
+    right: 5px;
+    top: 5px;
+  }
+
+  .topnav.responsive a:first-child{
+    margin-top: 40px;
+  }
+
+  .topnav.responsive a {
+    float: none;
+    display: block;
+    text-align: right;
+    padding: 1% 5px;
+  }
