--- a/css/main.css
+++ b/css/main.css
@@ -3,7 +3,7 @@
 }
 
 body {
-font-family: 'Quattrocento Sans', sans-serif;
+  font-family: 'Quattrocento Sans', sans-serif;
   font-size: 16px;
   color: white;
   text-align: center;
@@ -24,24 +24,8 @@ nav {
   left: 0;
   right: 0;
   z-index: 10;
-font-family: 'Quattrocento', serif;
+  font-family: 'Quattrocento', serif;
 }
-
-footer {
-  font-size: 12px;
-}
-
-
-.name{
-  float:left;
-}
-
-#projects h4 {
-  color: white;
-  font-size: 20px;
-}
-
-
 
 nav h4 {
   margin:0;
@@ -49,15 +33,23 @@ nav h4 {
   display: inline-block;
 }
 
+footer {
+  font-size: 12px;
+}
+
 a {
   color:white;
   text-decoration: none;
 }
 
+/* Initials on Navbar*/
+.name{
+  float:left;
+}
 
 header {
   margin-top: 30px;
-  background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)),url('images/seattleme.jpg');
+  background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)),url('../images/seattleme.jpg');
   background-repeat: no-repeat;
   background-size: cover;
   background-position: inherit;
@@ -74,16 +66,14 @@ header  h1,h2{
 
 header h1 {
   font-size: 1em;
-
 }
 
 header h2 {
   font-size: 0.75em;
 }
 
-header .foo {
-      padding: 18% 0 ;
-
+header .animation {
+  padding: 18% 0 ;
 }
 
 h3 {
@@ -92,6 +82,7 @@ h3 {
   font-family: 'Quattrocento', serif;
 }
 
+/* Project demo and github links*/
 .links {
   font-size: 20px;
 }
@@ -99,19 +90,19 @@ h3 {
 .links span {
   margin: 0 5px;
 }
+
 .links a {
   background-color: #2C3E50;
   padding: 5px;
   border-radius: 5px;
-   box-shadow: 2px 2px 2px #888888;
+  box-shadow: 2px 2px 2px #888888;
 }
 
 .links a:hover {
-     box-shadow:4px 4px 4px #888888;
-
+  box-shadow:4px 4px 4px #888888;
 }
 
- #contact p, #about p {
+#contact p, #about p {
   max-width: 1000px;
   margin: 0 auto;
   padding: 0 20px;
@@ -128,6 +119,11 @@ section {
   color: black;
 }
 
+#projects h4 {
+  color: white;
+  font-size: 20px;
+}
+
 #about{
   padding-bottom: 15%;
   background-color: #5a7590;
@@ -139,17 +135,18 @@ section {
   background-color: white;
 }
 
+/* section divider*/
 .halfcircle::before, .halfcircle::after {
   display:block;
- position:absolute;
- content:'';
- left: 50%;
- z-index:9;
- width: 40px;
- height: 40px;
- border-radius: 50%;
- -webkit-transform: translateX(-50%);
- transform: translateX(-50%);
+  position:absolute;
+  content:'';
+  left: 50%;
+  z-index:9;
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  -webkit-transform: translateX(-50%);
+  transform: translateX(-50%);
 }
 
 .halfcircle::after {
@@ -158,13 +155,8 @@ section {
 }
 
 .halfcircle::before {
-background: #78c1c1;
-
- bottom: -30px;
-}
-
-#projects  .flipper {
-  
+  background: #78c1c1;
+  bottom: -30px;
 }
 
 #email a {
@@ -197,7 +189,6 @@ background: #78c1c1;
 }
 
 img {
-  
   width:300px;
   max-width: 100%;
   border-radius: 5px;
@@ -211,13 +202,14 @@ img {
     -o-perspective: 1000;
     perspective: 1000;
 }
-  /* flip the pane when hovered */
-  .flip-container:hover .back, .flip-container.hover .back {
-    -webkit-transform: rotateY(0deg);
-    -moz-transform: rotateY(0deg);
-    -o-transform: rotateY(0deg);
-    -ms-transform: rotateY(0deg);
-    transform: rotateY(0deg);
+
+/* flip the pane when hovered */
+.flip-container:hover .back, .flip-container.hover .back {
+  -webkit-transform: rotateY(0deg);
+  -moz-transform: rotateY(0deg);
+  -o-transform: rotateY(0deg);
+  -ms-transform: rotateY(0deg);
+  transform: rotateY(0deg);
 }
 
 .flip-container:hover .front, .flip-container.hover .front {
@@ -233,73 +225,64 @@ img {
     margin-bottom: 20px;
 }
 
-/* flip speed goes here */
+
 .flipper {
   -moz-transform: perspective(1000px);
-    -moz-transform-style: preserve-3d;
-
+  -moz-transform-style: preserve-3d;
   position: relative;
 }
 
 /* hide back of pane during swap */
 .front, .back {
   -webkit-backface-visibility: hidden;
-    -moz-backface-visibility: hidden;
-    -o-backface-visibility: hidden;
-    backface-visibility: hidden;
+  -moz-backface-visibility: hidden;
+  -o-backface-visibility: hidden;
+  backface-visibility: hidden;
 
-    -webkit-transition: 0.6s;
-    -webkit-transform-style: preserve-3d;
+  -webkit-transition: 0.6s;
+  -webkit-transform-style: preserve-3d;
 
-    -moz-transition: 0.6s;
-    -moz-transform-style: preserve-3d;
+  -moz-transition: 0.6s;
+  -moz-transform-style: preserve-3d;
 
-    -o-transition: 0.6s;
-    -o-transform-style: preserve-3d;
+  -o-transition: 0.6s;
+  -o-transform-style: preserve-3d;
 
-    -ms-transition: 0.6s;
-    -ms-transform-style: preserve-3d;
+  -ms-transition: 0.6s;
+  -ms-transform-style: preserve-3d;
 
-    transition: 0.6s;
-    transform-style: preserve-3d;
+  transition: 0.6s;
+  transform-style: preserve-3d;
 
   position: absolute;
   left: 0;
   right:0;
   margin: 0 auto;
   padding: 10px;
-
 }
-
-
 
 /* front pane, placed above back */
 .front {
   z-index: 2;
-  /* for firefox 31 */
-  //-webkit-transform: rotateY(0deg);
-
   border:1px solid black;
   border-radius: 5px;
   background: linear-gradient(to bottom, #2C3E50 , #be6463); 
-    //height: 400px;
-    color: white;
+  color: white;
 }
 
 /* back, initially hidden pane */
 .back {
   -webkit-transform: rotateY(-180deg);
-    -moz-transform: rotateY(-180deg);
-    -o-transform: rotateY(-180deg);
-    -ms-transform: rotateY(-180deg);
-    transform: rotateY(-180deg);
+  -moz-transform: rotateY(-180deg);
+  -o-transform: rotateY(-180deg);
+  -ms-transform: rotateY(-180deg);
+  transform: rotateY(-180deg);
   background-color: black;
   border:1px solid black;
   border-radius: 5px;
   color:white;
   font-size: 18px;
 }
-
 
 
 .topnav a:hover {
@@ -317,25 +300,35 @@ img {
     background-color: #4CAF50;
 }
 
-.topnav a {display: none;}
+/*Hamburger menu for smaller screens*/
+
+.topnav a {
+  display: none;
+}
+
 a.icon {
-    float: right;
-    display: block;
-  }
-  .topnav.responsive {position: relative; float:none;}
-  a.icon {
-    position: absolute;
-    right: 10px;
-    top: 10px;
-  }
+  float: right;
+  display: block;
+}
 
-  .topnav.responsive a:first-child{
-    margin-top: 30px;
-  }
+.topnav.responsive {
+  position: relative; 
+  float:none;
+}
 
-  .topnav.responsive a {
-    float: none;
-    display: block;
-    text-align: right;
-    padding: 1% 5px;
-  }
+a.icon {
+  position: absolute;
+  right: 10px;
+  top: 10px;
+}
+
+.topnav.responsive a:first-child{
+  margin-top: 30px;
+}
+
+.topnav.responsive a {
+  float: none;
+  display: block;
+  text-align: right;
+  padding: 1% 5px;
+}
